--- a/bin/cenas/ProdutoCena.fxml
+++ b/bin/cenas/ProdutoCena.fxml
@@ -9,13 +9,13 @@
 
 <fx:root prefHeight="600.0" prefWidth="350.0" style="-fx-background-color: white;" type="AnchorPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="tabelaProdutos" focusTraversable="false" layoutX="13.0" layoutY="45.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="650.0">
+      <TableView fx:id="tabelaProdutos" focusTraversable="false" layoutX="13.0" layoutY="45.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickTabela" prefHeight="400.0" prefWidth="650.0">
         <columns>
           <TableColumn fx:id="ColId" prefWidth="28.0" text="ID" />
-          <TableColumn fx:id="ColNome" prefWidth="238.0" text="Nome" />
-            <TableColumn fx:id="ColPreco" prefWidth="42.0" text="Preço" />
-            <TableColumn fx:id="colQuant" prefWidth="94.0" text="Quant. Estoque" />
-            <TableColumn fx:id="colDescricao" prefWidth="247.0" text="Descrição" />
+          <TableColumn fx:id="ColNome" prefWidth="225.0" text="Nome" />
+            <TableColumn fx:id="ColPreco" prefWidth="38.0" text="Preço" />
+            <TableColumn fx:id="colQuant" prefWidth="89.0" text="Quant. Estoque" />
+            <TableColumn fx:id="colDescricao" prefWidth="269.0" text="Descrição" />
         </columns>
       </TableView>
       <Button fx:id="btnProdutosAdicionar" layoutX="44.0" layoutY="541.0" mnemonicParsing="false" onAction="#clickProdutosAdicionar" prefHeight="34.0" prefWidth="179.0" style="-fx-background-color: cornflowerblue;" text="Adicionar" textFill="WHITE">
@@ -31,9 +31,10 @@
             <Cursor fx:constant="HAND" />
          </cursor></Button>
       <TextField fx:id="produtoPesquisaEntrada" layoutX="66.0" layoutY="10.0" onKeyPressed="#pesquisaEntradaMudou" prefHeight="25.0" prefWidth="557.0" promptText="Pesquisar" />
-      <TextField fx:id="entradaProdutoNome" layoutX="25.0" layoutY="471.0" prefHeight="25.0" prefWidth="373.0" promptText="Nome" />
-      <TextField fx:id="entradaProdutoPreco" layoutX="409.0" layoutY="471.0" prefHeight="25.0" prefWidth="110.0" promptText="Preço" />
-      <TextField fx:id="entradaProdutoQuant" layoutX="528.0" layoutY="470.0" prefHeight="25.0" prefWidth="110.0" promptText="Quantidade Estoque" />
+      <TextField fx:id="entradaProdutoNome" layoutX="94.0" layoutY="470.0" prefHeight="25.0" prefWidth="357.0" promptText="Nome" />
+      <TextField fx:id="entradaProdutoPreco" layoutX="460.0" layoutY="470.0" prefHeight="25.0" prefWidth="80.0" promptText="Preço" />
+      <TextField fx:id="entradaProdutoQuant" layoutX="549.0" layoutY="470.0" prefHeight="25.0" prefWidth="80.0" promptText="Quantidade Estoque" />
       <TextField fx:id="entradaProdutoDescricao" layoutX="33.0" layoutY="502.0" prefHeight="25.0" prefWidth="596.0" promptText="Descrição" />
+      <TextField fx:id="entradaProdutoId" editable="false" layoutX="33.0" layoutY="470.0" prefHeight="25.0" prefWidth="52.0" promptText="ID" />
    </children>
 </fx:root>
