--- a/src/cenas/PrincipalCena.fxml
+++ b/src/cenas/PrincipalCena.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PrincipalControle">
    <children>
@@ -25,6 +27,16 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
+            <Text layoutX="20.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciamento De Vendas" underline="true">
+               <font>
+                  <Font name="Impact" size="27.0" />
+               </font>
+            </Text>
+            <Text fx:id="funcionarioNome" layoutX="82.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Funcionario Nome" AnchorPane.leftAnchor="82.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Text>
          </children>
       </AnchorPane>
       <BorderPane fx:id="painelBranco" layoutX="328.0" prefHeight="600.0" prefWidth="672.0" />
